@@ -1,5 +1,10 @@
 2016-09-19  Edward Jones  <ed.jones@embecosm.com>
 
+	* Driver.cpp: Remove -mageec-config option, and add
+	-mageec-features and -mageec-out options.
+
+2016-09-19  Edward Jones  <ed.jones@embecosm.com>
+
 	* Driver.cpp: Add -mageec-gcc option to specify the command to
 	invoke gcc.
 
